# data-warehouse

./: .gitignore  .user.yml  README.md  profiles.yml  pyproject.toml  workflow
app/: app.py  requirements.txt
datawarehouse/: dbt_project.yml
datawarehouse/docs/: homepage.md
datawarehouse/models/: schema.yml
datawarehouse/models/datamart/: dm_commodities.sql  schema.yml
datawarehouse/models/staging/: commodities_movements.sql  schema.yml  stg_commodities.sql  stg_commodities_movements.sql
datawarehouse/seeds/: commodities_movements.csv
src/: extract_load.py  requirements.txt
